--- a/package.json
+++ b/package.json
@@ -22,19 +22,20 @@
   },
   "homepage": "https://github.com/perzi/convert-to-modules#readme",
   "dependencies": {
+    "commander": "^2.14.1",
     "escope": "^3.6.0",
-    "eslint": "^4.13.1",
+    "eslint": "^4.18.0",
     "esprima": "^4.0.0",
     "jscodeshift": "^0.4.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.5"
   },
   "devDependencies": {
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-config-standard-jsx": "^4.0.2",
     "eslint-formatter-summary": "^1.0.2",
-    "eslint-plugin-react": "^7.5.1",
-    "prettier-eslint": "^8.4.0",
-    "prettier-eslint-cli": "^4.6.1",
+    "eslint-plugin-react": "^7.6.1",
+    "prettier-eslint": "^8.8.1",
+    "prettier-eslint-cli": "^4.7.1",
     "standard": "^10.0.3"
   }
 }
